fixed inconsistent spacing

--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -25,8 +25,8 @@
     padding: 15px;
     margin: 0;
 }
-.Container ul li:not(:first-child) {
-    margin: 15px 0px 0px 0px;
+.Container ul li:not(:last-child) {
+    margin: 0px 0px 15px 0px;
 }
 .Container.scrollable ul {
     overflow-y: auto;
